# CSE6242_Team148

./: .gitignore  Clean_project_data.ipynb  KD_Clean_project_data.ipynb  README.md  SongcollectionUpdated  artist_graph.html  euclidian_distance_model.Rmd  euclidian_distance_model.ipynb  models.ipynb  pyproject.toml  retrieve_random_spotify_tracks.ipynb
assets/: Spotifty_songs_CSE6242.csv  artists.csv  dataset_clean.csv  music_data.db  track_features.csv
config/: dev.env
notebooks/: prepare_data.ipynb  retrieve_random_spotify_tracks.ipynb  synthetic data.ipynb
src/: app.py  chatbot.py  database.py  genre_profiles.py  graphs.py  models.py  queries.py  similarity_model.py  state_management.py  synthetic_data.py  visualizations.py
src/assets/: albums.csv  track_artists.csv  tracks.csv
