[tool.poetry]
name = "spotify-graph-playlist"
version = "0.1.0"
description = "A Graph Based Spotify Playlist Generator"
authors = [
    "Sean Guarnaccio <sguarnaccio3@gatech.edu>",
    "Shaun Ault <sault3@gatech.edu>",
    "Jane Miller <emiller322@gatech.edu>",
    "Keith Deuser <keithdeu@gatech.edu>",
    "Sean Nixon <snixon8@gatech.edu>",
    "Christain Ore <core3@gatech.edu>"
]
readme = "README.md"

[tool.poetry.package]
include = ["src"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.1"
spotipy = "^2.24.0"
fastapi = {extras = ["standard"], version = "^0.110.0"}
pydantic-settings = ">2.1.0,<3.0.0"
streamlit = "^1.3.9"
neo4py = "^1.1.5"
networkx = "^3.4.1"
pyvis = "^0.3.2"
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
aiohttp = "^3.10.10"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
sortables = "^0.1.1"
streamlit-sortables = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
black = "^23.7.0"
pylint = "^3.0.3"  # For linting
isort = "^5.13.2"
mypy = "^1.8.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
python-dotenv = "^1.0.1"

[tool.isort]
profile = "black"

[tool.mypy]
show_error_codes = true
warn_no_return = true

[tool.black]
line-length = 88

[tool.pylint.BASIC]
good-names = ["i", "j", "k", "n", "f", "fp"]
max-args = 9

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 88
disable = [
    "line-too-long",
    "invalid-name",
    "missing-docstring"
]

[tool.pylint."FORMAT"]
max-branches = 8
max-line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.core.masonry.api"
